--- a/008/package.json
+++ b/008/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "007",
+  "name": "008",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.1"
+    "express": "^4.17.1"
   }
 }
