--- a/191214-/hubot-todo/package.json
+++ b/191214-/hubot-todo/package.json
@@ -2,7 +2,7 @@
   "name": "hubot-todo",
   "version": "0.0.0",
   "private": true,
-  "author": "Haryoiro <mizusecocolt@gmail.com>",
+  "author": "h",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "^3.3.2",
