--- a/191214-/pls/package.json
+++ b/191214-/pls/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "helmet": "^3.21.2",
     "morgan": "~1.0.0",
     "pug": "^2.0.4",
     "static-favicon": "~1.0.0"
