--- a/191229-/002/onGame/package.json
+++ b/191229-/002/onGame/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "webpack": "node_modules/.bin/webpack",
-    "let": "PORT=8000 nodejs ./bin/www"
+    "start": "PORT=8000 nodejs ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
@@ -13,12 +13,11 @@
     "express": "~4.0.0",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
+    "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "pug": "^2.0.4",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
     "static-favicon": "~1.0.0"
   },
   "main": "index.js",
